# pyroll-hensel-force-torque

./: .pytask.sqlite3  README.md  hatch.toml  pyproject.toml
docs/: docs.md  task_deformation_resistance.py  task_lever_arm.py  task_pandoc_docs.py
docs/data/deformation_resistance/: box_box.csv  diamond_square.csv  hexagon_square.csv  lower_curve.csv  oval_round.csv  oval_square.csv  square_diamond.csv  square_hexagon.csv  square_oval.csv  upper_curve.csv
docs/data/lever_arm/: box_box.csv  diamond_square.csv  hexagon_square.csv  lower_curve.csv  mid_curve.csv  round_oval.csv  square_diamond.csv  square_hexagon.csv  square_oval.csv  upper_curve.csv
pyroll/: hensel_force_torque.py  hensel_power_and_labour.py
pyroll/hensel_force/: __init__.py  export.py  report.py  specs.py
pyroll/hensel_power_and_labour/: impls.py
pyroll_hensel_force/: __init__.py  export.py  impls.py  report.py  specs.py
tests/: test_solve.py  test_solve3.py  test_solve_de.py
