[tool.poetry]
name = "pyroll-hensel-power-and-labour"
version = "1.0.0"
description = "PyRoll plugin providing roll force and roll torque empirical approach by A. Hensel."
authors = [
]
license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-hensel-power-and-labour"
documentation = "https://github.com/pyroll-project/pyroll-hensel-power-and-labour/blob/main/docs/docs.pdf"
packages = [
    { include = "pyroll/hensel_power_and_labour" }
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = ">= 3.9, <3.11"
pyroll = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyroll = { git = "https://github.com/pyroll-project/pyroll-core", branch = "main", develop = true }
pytask = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
